--- a/Views/stylist.cshtml
+++ b/Views/stylist.cshtml
@@ -1,15 +1,16 @@
-@if (Model.Count == 0)
+@if (@Model["stylistClients"].Count == 0)
 {
   <p>No clients have been added yet</p>
 }
-
-<ul>
-  @foreach (var client in Model)
-  {
-    <li><a href="/client/@client.GetId()">@client.GetClientName()</a></li>
-  }
-</ul>
-
+else
+{
+  <ul>
+    @foreach (var client in Model["stylistClients"])
+    {
+      <li><a href="/client/@client.GetId()">@client.GetClient()</a></li>
+    }
+  </ul>
+}
 <form action="/client/new" method="post">
   <label for="client_name">Name of client: </label>
   <input type="text" name="client_name" required autofocus="" placeholder="Enter a Stylist name">
